<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Hello, Android</string>
	<string name="dummy_button">Dummy Button</string>
	<string name="dummy_content">DUMMY\nCONTENT</string>
	<string name="red">red</string>
	<string name="green">green</string>
	<string name="blue">blue</string>
	<string name="yellow">yellow</string>
	<string name="row1">row one</string>
	<string name="row2">row two</string>
	<string name="row3">row three</string>
	<string name="row4">row four</string>
	<string name="cancel">Cancel</string>
	<string name="ok">OK</string>
	<string name="type_here">Type Here :</string>
	<string name="radio_C">Celsius</string>
	<string name="radio_F">Feranhite</string>
	<string name="button_convert">Convert</string>
	<string name="title_activity_converter">Converter</string>
	<string name="action_settings">Settings</string>
	<string name="hello_world">Hello world!</string>
	<string name="call">Call Rantali</string>
	<string name="browser">Browser</string>
	<string name="map">Map Location</string>
	<string name="capture_image">Capture Image</string>
	<string name="view_contacts">View Contacts</string>
	<string name="title_activity_assignment4">Assignment4</string>
	<string name="title_activity_list_view">ListView</string>
	<string name="title_activity_custom_list">CustomListActivity</string>
	<string name="title_activity_my_custom_list">MyCustomListActivity</string>
	<string name="title_activity_main">MainActivity</string>
	<string name="choose_color">Choose Color</string>
	<string name="delete">Delete</string>
	<string name="refresh">Refresh</string>
	<string name="title_activity_choose_color">ChooseColor</string>
	<string name="add">Add</string>
	<string name="title_activity_add_country">AddCountry</string>
	<string name="country_name">Name : </string>
	<string name="country_color">Color : </string>
	
	 <string-array name="colors_array">
        <item>red</item>
        <item>green</item>
        <item>blue</item>
    </string-array>

</resources>
