<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"  
    android:layout_width="fill_parent" android:layout_height="fill_parent"  
    android:orientation="vertical"
    >  
  <LinearLayout 
    android:layout_width="fill_parent" android:layout_height="fill_parent"  
    android:orientation="horizontal"
    android:layout_weight="1">
    <TextView android:text="@string/red" android:id="@+id/TextView01"  
        android:layout_height="fill_parent" android:background="#f00"  
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal" android:textColor="#000"></TextView>  
    <TextView android:text="@string/green" android:id="@+id/TextView04"  
        android:layout_height="fill_parent" android:layout_width="wrap_content"  
        android:background="#0f0" android:gravity="center_horizontal"
        android:layout_weight="1"  
        android:textColor="#000"></TextView>  
    <TextView android:text="@string/blue" android:id="@+id/TextView05"  
        android:layout_height="fill_parent" android:layout_width="wrap_content"  
        android:background="#00f" android:gravity="center_horizontal"
        android:layout_weight="1"          
        android:textColor="#fff"></TextView>            
    <TextView android:text="@string/yellow" android:id="@+id/TextView03"  
        android:layout_height="fill_parent" android:layout_width="wrap_content"  
        android:background="#ffff00"
        android:layout_weight="1"          
        android:gravity="center_horizontal" android:textColor="#000"></TextView>  
    </LinearLayout>
    <LinearLayout
    android:layout_width="fill_parent" android:layout_height="fill_parent"  
    android:orientation="vertical"
    android:layout_weight="1">
        <TextView android:text="@string/row1" 
            android:id="@+id/TextView08"  
            android:layout_height="wrap_content" 
            android:layout_width="fill_parent"  
            android:background="#000"  
            android:layout_weight="1"
            android:textSize="50sp"
            android:textColor="#fff"></TextView>
        <TextView android:text="@string/row2" 
            android:id="@+id/TextView09"  
            android:layout_height="wrap_content" 
            android:layout_width="fill_parent"  
            android:background="#000"
            android:layout_weight="1"
            android:textSize="50sp"           
            android:textColor="#fff"></TextView>  
        <TextView android:text="@string/row3" android:id="@+id/TextView10"  
             android:layout_height="wrap_content" 
             android:layout_width="fill_parent"  
             android:background="#000"
             android:layout_weight="1"
             android:textSize="50sp"                
             android:textColor="#fff"></TextView> 
        <TextView
            android:id="@+id/TextView11"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#000"
            android:text="@string/row4"
            android:textColor="#fff"
            android:textSize="50sp" >
</TextView>                                           
    </LinearLayout>
</LinearLayout>  