<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@color/black_overlay" >

	<TextView
		android:id="@+id/textView1"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/type_here"
		android:textSize="20sp" />

	<EditText
		android:id="@+id/editText1"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_below="@+id/textView1"
		android:background="#fff"
		android:inputType="text" >
		<requestFocus />
	</EditText>
	
	<Button
		android:id="@+id/button1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/editText1"
		android:layout_marginRight="15sp"
		android:layout_marginTop="5sp"
		android:layout_toLeftOf="@+id/button2"
		android:background="#F0F8FF"
		android:text="@string/cancel"
		android:textColor="#000" />
	
	<Button
		android:id="@+id/button2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_below="@+id/editText1"
		android:layout_marginTop="5sp"
		android:background="#F0F8FF"
		android:text="@string/ok"
		android:textColor="#000" />

</RelativeLayout>